--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
 	"description": "some chron jobs for davidson galleries",
 	"main": "index.js",
 	"scripts": {
-	  "test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
-	  "type": "git",
-	  "url": "git+https://github.com/adamglang/node-cron-jobs.git"
+		"type": "git",
+		"url": "git+https://github.com/adamglang/node-cron-jobs.git"
 	},
 	"author": "adam",
 	"license": "ISC",
 	"bugs": {
-	  "url": "https://github.com/adamglang/node-cron-jobs/issues"
+		"url": "https://github.com/adamglang/node-cron-jobs/issues"
 	},
 	"homepage": "https://github.com/adamglang/node-cron-jobs#readme",
 	"dependencies": {
-	  "express": "^4.17.1",
-	  "fs": "0.0.1-security",
-	  "node-cron": "^2.0.3"
+		"eslint": "^6.0.1",
+		"eslint-config-airbnb": "^17.1.1",
+		"eslint-plugin-import": "^2.18.0",
+		"express": "^4.17.1",
+		"fs": "0.0.1-security",
+		"moment": "^2.24.0",
+		"mysql-backup": "^1.0.0",
+		"node-cron": "^2.0.3",
+		"node-schedule": "^1.3.2",
+		"s3-stream-upload": "^2.0.2"
 	}
-  }
+}
