--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
 	},
 	"homepage": "https://github.com/adamglang/node-cron-jobs#readme",
 	"dependencies": {
-		"eslint": "^6.0.1",
-		"eslint-config-airbnb": "^17.1.1",
-		"eslint-plugin-import": "^2.18.0",
-		"express": "^4.17.1",
-		"fs": "0.0.1-security",
 		"moment": "^2.24.0",
 		"mysql-backup": "^1.0.0",
 		"node-cron": "^2.0.3",
 		"node-schedule": "^1.3.2",
 		"s3-stream-upload": "^2.0.2"
+	},
+	"devDependencies": {
+		"eslint": "^6.0.1",
+		"eslint-config-airbnb": "^17.1.1",
+		"eslint-plugin-import": "^2.18.0"
 	}
 }
